# research-project-template

./: .gitignore  AGENTS.md  ANATOMY.md  CLAUDE.md  PROJECT.md  README.md  harness.yaml
.agent/: README.md  action-boundary.md  anatomy-protocol.md  artifact-policy.md  context-memory-policy.md  human-gates.md  model-routing-policy.md  (+6 more)
.harness/blueprints/code/ml-python/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.harness/blueprints/code/ml-python/docs/dev/: feature_template.md
.harness/blueprints/code/ml-python/docs/ops/: current-status.md  decision-log.md
.harness/blueprints/code/ml-python/docs/outlines/: progress.md
.harness/blueprints/code/ml-python/docs/results/: README.md
.harness/blueprints/code/ml-python/docs/runs/: README.md
.harness/blueprints/code/ml-python/docs/src/: dependencies.md
.harness/blueprints/code/ml-python/eval/: __init__.py
.harness/blueprints/code/ml-python/eval/baselines/: README.md
.harness/blueprints/code/ml-python/eval/baselines/reproduced/: README.md
.harness/blueprints/code/ml-python/experiments/: evaluate.py
.harness/blueprints/code/ml-python/experiments/configs/: base.yaml
.harness/blueprints/code/ml-python/infra/: README.md  remote-projects.yaml
.harness/blueprints/code/ml-python/infra/envs/: cluster.yaml.example
.harness/blueprints/code/ml-python/scripts/: download_data.py
.harness/blueprints/code/ml-python/src/: README.md
.harness/blueprints/code/ml-python/src/project_code/: __init__.py
.harness/blueprints/code/ml-python/tests/: test_placeholder.py
(+146 files in other folders)
